fidoconfig 0.9
--------------

----- cvs ci ------
Thu Aug 26  20:26:50
Fedor:
+ added AreaOption - Jam (adapted smapi for JAM). Need check and test.

----- cvs ci ------
Fri Aug 20 14:42:16 NOVST 1999
max:
+ added token areafixSplitStr
* changes in tparser (print all new tokens)
	
----- cvs ci ------
Mon Aug 16 12:33:46 NOVST 1999
max:
+ added echoarea token -manual. same as -mandatory.
+ added tokens beforePack & afterUnpack
* small changes in docmentation.

----- cvs ci ------
Sat Aug 14 23:34:49 NOVST 1999
max:
+ added token areafixmsgSize

----- cvs ci ------
Fri Aug 13 13:30:54 NOVST 1999
max:
+ added token carbonKeepSb
+ added token -keepsb in echoarea option
	
Thu Aug 12
sms:
+ some work on dump.c
+ added dumpfcfg (simply calls dumpConfig())

----- cvs ci ------
Wed Aug 11 02:20:37 NOVST 1999
max:
+ added carbonSubj and carbonText tokens
+ added carbonAndQuit token
	
----- cvs ci ------
Mon Aug  9 15:34:24 NOVST 1999
max:
+ added token for Hash Dupes by Oleg Zrozhevsky 

----- cvs ci ------
Thu Aug 03 11:38:30 1999
Georgi:
+ Added "-lw <level>" and "-lr <level>" in filearea options

Mon Aug 02 18:20:50 1999
Georgi:
+ Added token BbsArea <name> <directory> "<description>"

Thu Jul 29 10:43:22 CEST 1999 	
mtt:
+ added logEchoToScreen to tparser
	
----- cvs ci ------
Sun Jul 18 15:21:25 1999
Georgi:
+ Added token passFileAreaDir (directory for Passthrough fileareas)
+ Added token Passthrough in FileArea

----- cvs ci ------
Sat Jul 10 17:08:44 CEST 1999
mtt:
* changed void main to int main (fecfg2fconf.c) 
* futher work on dump.c

----- cvs ci ------
Sat Jul 10 00:11:58 CEST 1999
mtt:
+ started working on that dumpConfig code (quite boring :-( )

----- cvs ci ------
Mon Jun 28  16:43:00
Fedor:
+ Added compiling fecfg2fconf (fastecho.cfg -> fidoconfig) for Linux

----- cvs ci ------
Sun Jun 27  15:02:00
Fedor:
+ Added copy_file() function in common.c
* Fixed problem with compiling for OS/2 and Watcom

----- cvs ci ------
Thu Jun 24 17:24:42 CEST 1999
mtt: